--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
     color: #333
     text-align: center;
     font-family: Arial;
@@ -9,12 +10,17 @@ body
 }
 #cabecera
 {
-    background: #33A;
+    background: #37488b;
     box-shadow: opx 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5cm;
+}
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 #cabecera #tagline
 {
@@ -36,5 +42,6 @@ body
 }
 #post
 {
+    background: white;
     padding: 1em;
 }
