--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,12 @@
-body
-{
-    color: #333
-    text-align: center;
+body {
+    color: #333 text-align: center;
     font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
-#cabecera
-{
+
+#cabecera {
     background: #33A;
     box-shadow: opx 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
@@ -16,25 +14,32 @@ body
     margin: 0;
     padding: 0.5cm;
 }
-#cabecera #tagline
-{
+
+#cabecera #tagline {
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8cm;
 }
-#container
-{
+
+#container {
     width: 70%;
     padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
 }
-#container h1
-{
+
+#container h1 {
     font-size: 20px;
 }
-#post
-{
+
+#post {
     padding: 1em;
+}
+
+#footer {
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
