arreglo de los archivos conflicto

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,26 +2,18 @@
 body
 {
     background: #1e1f24;
-    color: #333
+    color: #333;
     text-align: center;
-=======
-body {
-    color: #333 text-align: center;
->>>>>>> footer
+
     font-family: Arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
-<<<<<<< HEAD
+
 #cabecera
 {
     background: #37488b;
-=======
-
-#cabecera {
-    background: #33A;
->>>>>>> footer
     box-shadow: opx 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
@@ -53,14 +45,10 @@ body {
 #container h1 {
     font-size: 20px;
 }
-<<<<<<< HEAD
+
 #post
 {
     background: white;
-=======
-
-#post {
->>>>>>> footer
     padding: 1em;
 }
 
